--- a/frontend/core/src/main/webapp/static/partials/templates/itemsList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/itemsList.html
@@ -15,7 +15,7 @@
         </button>
 
         <button type="button" class="editItem" ng-click="setActiveItem(item)">
-          task
+          <a href="/my/tasks/new/{{item.uuid}}">task</a>
         </button>
 
       </div>
