--- a/frontend/core/src/main/webapp/static/partials/my/tasks/new.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/new.html
@@ -5,7 +5,7 @@
     <div id="header">
 
       <div class="inlineblock">
-        <h4><a href="/my" class="em-subtitle">tasks</a></h4>
+        <h4><a href="/my/tasks" class="em-subtitle">tasks</a></h4>
       </div>
 
       <div class="inlineblock">
