Some preliminary Bootstrap work

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -1,3 +1,9 @@
+
+.container {
+  box-sizing: border-box;
+  padding: 50px;
+}
+
 a, .em-subtitle {
   color: gray;
 }
@@ -78,9 +84,7 @@ button.toggle:hover {
 form.newItem {
 }
 
-.masthead {
-  padding-bottom: 50px;
-  padding-top: 140px;
+.em-front {
   text-align: center;
 }
 
