--- a/frontend/core/src/main/webapp/static/partials/home.html
+++ b/frontend/core/src/main/webapp/static/partials/home.html
@@ -1,14 +1,10 @@
-<div class="span12">
-  <!-- Page Content -->
-  <div class="masthead">
 
-    <h3>extended mind</h3>
+<div class="em-front">
+  <h3>extended mind</h3>
 
-    <p url-list></p>
+  <p url-list></p>
 
-    <p>
-      wlcm
-    </p>
-
-  </div>
+  <p>
+    wlcm
+  </p>
 </div>
