--- a/frontend/core/src/main/webapp/static/partials/pageNotFound.html
+++ b/frontend/core/src/main/webapp/static/partials/pageNotFound.html
@@ -2,7 +2,12 @@
   <!-- Page Content -->
   <div class="masthead">
     <h3>extended mind</h3>
-    <p url-list></p>
+    <div url-list></div>
+
+    <p>
+      &nbsp;
+    </p>
+
     <p>
       404 Not Found
     </p>
