--- a/frontend/core/src/main/webapp/static/partials/home.html
+++ b/frontend/core/src/main/webapp/static/partials/home.html
@@ -2,7 +2,11 @@
 <div class="em-front">
   <h3>extended mind</h3>
 
-  <p url-list></p>
+  <div url-list></div>
+
+  <p>
+    &nbsp;
+  </p>
 
   <p>
     wlcm
