--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,34 +1,17 @@
-<div class="em-home">
-  <h3>extended mind</h3>
+<div class="swiper-container">
+  <div class="swiper-wrapper">
 
-  <form name="searchAndAddOmniForm">
-
-    <input type="search" class="formContent"  ng-model="newItem.title" autofocus="autofocus" placeholder="Search / Add">
-    <button type="button" class="addNew" ng-click="addNewItem()">
-        +
-    </button>
-
-  </form>
-
-  <div>
-    <button type="button" class="toggle" ng-click="toggleItemsList()">
-      <h4>inbox ({{items.length}})</h4>
-    </button>
-    <div ng-show="showMe" items-list itemsfilter="newItem.title"></div>
-  </div>
-
-  <div>
-    <div notes-list notesfilter="newItem.title">
-      <h4><a href="/my/notes" class="em-subtitle">notes</a></h4>
+    <div class="swiper-slide">
+      <div my-swipe></div>
     </div>
-  </div>
 
-  <div>
-    <div tasks-list tasksfilter="newItem.title">
-      <h4><a href="/my/tasks" class="em-subtitle">tasks</a></h4>
+    <div class="swiper-slide">
+      <div tasks></div>
     </div>
+
+    <div class="swiper-slide">
+      <div notes></div>
+    </div>
+
   </div>
-
-  <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
-
 </div>
