--- a/frontend/core/src/main/webapp/static/partials/my/tasks/new.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/new.html
@@ -1,17 +1,17 @@
-  <div class="em-core">
+<div class="em-core">
 
-    <div id="header">
+  <div id="header">
 
-      <div class="inlineblock">
-        <h4><a href="/my/tasks" class="em-subtitle">tasks</a></h4>
-      </div>
-
-      <div class="inlineblock">
-        <h4>new</h4>
-      </div>
-
+    <div class="inlineblock">
+      <h4><a href="my/tasks" class="em-subtitle">tasks</a></h4>
     </div>
 
-    <div new-task></div>
+    <div class="inlineblock">
+      <h4>new</h4>
+    </div>
 
   </div>
+
+  <div new-task></div>
+
+</div>
