--- a/frontend/core/src/main/webapp/static/partials/templates/newTask.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/newTask.html
@@ -24,7 +24,7 @@
         Add
       </button>
       <button class="formAction" type="submit" ng-click="cancelNewTask()">
-        <a href="/my/tasks">Cancel</a>
+        <a href="my/tasks">Cancel</a>
       </button>
     </fieldset>
 
