--- a/frontend/core/src/main/webapp/static/partials/my/tasks.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks.html
@@ -1,33 +1,35 @@
-<div>
-  <div id="header">
+<div class="{{pageAnimation}}">
+  <div ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
+    <div id="header">
 
-    <div class="inlineblock">
-      <h4>previous <a href="/my/tasks" class="em-subtitle">tasks</a> next</h4>
+      <div class="inlineblock">
+        <h4><a href="my/tasks" class="em-subtitle">tasks</a></h4>
+      </div>
+
+      <div class="inlineblock">
+        <button type="button" class="addNew">
+          <a href="my/tasks/new/">+</a>
+        </button>
+      </div>
+
     </div>
 
-    <div class="inlineblock">
-      <button type="button" class="addNew">
-        <a href="/my/tasks/new/">+</a>
-      </button>
+    <div>
+      <h4>inbox</h4>
+      <div tasks-list tasksfilter="{{tasksListFilter}}"></div>
+    </div>
+
+    <div>
+      <h4>projects</h4>
+      <div projects-list></div>
+    </div>
+
+    <h4>areas</h4>
+
+    <div>
+      <h4>contexts</h4>
+      <div contexts-list></div>
     </div>
 
   </div>
-
-  <div>
-    <h4>inbox</h4>
-    <div tasks-list tasksfilter="{{tasksListFilter}}"></div>
-  </div>
-
-  <div>
-    <h4>projects</h4>
-    <div projects-list></div>
-  </div>
-
-  <h4>areas</h4>
-
-  <div>
-    <h4>contexts</h4>
-    <div contexts-list></div>
-  </div>
-
 </div>
