--- a/frontend/core/src/main/webapp/static/partials/templates/contextsList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/contextsList.html
@@ -1,7 +1,7 @@
 <ul>
   <li ng-repeat="context in tags">
 
-    <span ng-click="setActiveItem(context)"><a href="/my/tasks/context/{{context.uuid}}">@{{context.title}}</a></span>
+    <span ng-click="setActiveItem(context)"><a href="my/tasks/context/{{context.uuid}}">@{{context.title}}</a></span>
 
   </li>
 </ul>
