--- a/frontend/core/src/main/webapp/static/partials/templates/taskContent.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/taskContent.html
@@ -5,13 +5,13 @@
   </li>
   <li ng-repeat="tag in task.relationships.tags | tagTitle">
 
-    <span ng-click="setActiveItem(tag)"><a href="/my/tasks/context/{{tag.uuid}}">@{{tag.title}}</a></span>
+    <span ng-click="setActiveItem(tag)"><a href="my/tasks/context/{{tag.uuid}}">@{{tag.title}}</a></span>
 
   </li>
 
   <li>
     <button type="button" class="editItem" ng-click="setActiveItem(task)">
-      <a href="/my/tasks/project/{{task.uuid}}">add subtask</a>
+      <a href="my/tasks/project/{{task.uuid}}">add subtask</a>
     </button>
   </li>
 
