--- a/frontend/core/src/main/webapp/static/partials/templates/urlList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/urlList.html
@@ -1,3 +1,3 @@
 <div>
-  <a href="/my/tasks">tasks</a> | <a href="/my/notes">notes</a> | <a href="/login">login</a> | <a href="/my">my</a> | <a href="/">home</a>
+  <a href="my/tasks">tasks</a> | <a href="my/notes">notes</a> | <a href="login">login</a> | <a href="my">my</a> | <a href="/">home</a>
 </div>
