--- a/frontend/core/src/main/webapp/static/partials/templates/contextsList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/contextsList.html
@@ -1,5 +1,7 @@
 <ul>
-  <li ng-repeat="context in tags">
+  <li ng-repeat="context in tags" ng-animate="{enter: 'example-repeat-enter',
+  leave: 'example-repeat-leave',
+  move: 'example-repeat-move'}">
 
     <span ng-click="setActiveItem(context)"><a href="my/tasks/context/{{context.uuid}}">@{{context.title}}</a></span>
 
