Add new subtask. Task subpage layout fixes.

--- a/frontend/core/src/main/webapp/static/partials/my/tasks/new.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/new.html
@@ -1,4 +1,4 @@
-<div class="em-core">
+<div>
 
   <div id="header">
 
@@ -7,7 +7,9 @@
     </div>
 
     <div class="inlineblock">
-      <h4>new</h4>
+      <button type="button" class="addNew">
+        <a href="my/tasks">-</a>
+      </button>
     </div>
 
   </div>
