--- a/frontend/core/src/main/webapp/static/partials/templates/newTask.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/newTask.html
@@ -2,7 +2,7 @@
   <fieldset>
 
     <fieldset>
-      <input id="input-id" class="formContent" type="text" ng-model="newTask.title" autofocus="autofocus" placeholder="title...">
+      <input id="input-id" class="formContent" type="text" ng-model="newTask.title" autofocus="autofocus" placeholder="title..." required>
     </fieldset>
 
     <fieldset>
@@ -20,11 +20,8 @@
     </fieldset>
 
     <fieldset>
-      <button class="formAction" type="submit" ng-click="addNewTask()">
+      <button class="formAction" type="submit" ng-disabled="!addTask.$valid" ng-click="addNewTask()">
         Add
-      </button>
-      <button class="formAction" type="submit" ng-click="cancelNewTask()">
-        <a href="my/tasks">Cancel</a>
       </button>
     </fieldset>
 
