Navigation bar page header title.

--- a/frontend/core/src/main/webapp/static/partials/templates/navigation.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/navigation.html
@@ -10,7 +10,7 @@
     </li>
 
     <div class="page-header">
-      <h1>Extended Mind <small>My</small></h1>
+      <h1>{{pageTitle}} <small>{{subtitle}}</small></h1>
     </div>
 
   </ul>
