--- a/frontend/core/src/main/webapp/static/partials/templates/navigation.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/navigation.html
@@ -1,6 +1,6 @@
 <div ng-controller="NavigationController">
 
-  <nav class="navbar navbar-default" role="navigation">
+  <nav class="navbar" role="navigation">
     <div class="navbar-left">
       <button type="button" class="btn btn-default navbar-btn" ng-click="swipeRight()">
         &larr;
