--- a/frontend/core/src/main/webapp/static/partials/templates/navigation.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/navigation.html
@@ -1,19 +1,10 @@
 <div ng-controller="NavigationController">
 
   <nav class="navbar" role="navigation">
-    <div class="navbar-left">
-      <button type="button" class="btn btn-default navbar-btn" ng-click="swipeRight()">
-        &larr;
-      </button>
-    </div>
 
     <div class="navbar-header">
-      <h1>{{pageTitle}} <small>{{subtitle}}</small></h1>
+      <h1><small> <a href="" class="navbar-link" ng-click="swipeRight()">&laquo; </a>{{subtitle}} <a href="" class="navbar-link" ng-click="swipeLeft()">&raquo;</a></small></h1>
     </div>
-    <div class="navbar-right">
-      <button type="button" class="btn btn-default navbar-btn" ng-click="swipeLeft()">
-        &rarr;
-      </button>
-    </div>
+
   </nav>
 </div>
