--- a/frontend/core/src/main/webapp/landing/em.css
+++ b/frontend/core/src/main/webapp/landing/em.css
@@ -17,7 +17,12 @@
 }
 
 .stich-top {
-  background-image: -webkit-linear-gradient(0deg, #5c5c5c 60%, transparent 60%, transparent 100%), -webkit-linear-gradient(0deg, #5c5c5c 60%, transparent 60%, transparent 100%);
+  background-image:
+         -webkit-linear-gradient(0deg, #5c5c5c 60%, transparent 60%, transparent 100%),
+         -webkit-linear-gradient(0deg, #5c5c5c 60%, transparent 60%, transparent 100%);
+  background-image:
+         -moz-linear-gradient(0deg, #5c5c5c 60%, transparent 60%, transparent 100%),
+         -moz-linear-gradient(0deg, #5c5c5c 60%, transparent 60%, transparent 100%);
   left: 0px;
   right: 0px;
   height: 1px;
@@ -25,6 +30,7 @@
   background-size: 40px 1px;
   background-position: 0px 0px, 0px 1px;
   -webkit-box-sizing: border-box;
+  -moz-box-shadow: border-box;
   margin: 0;
   padding: 0;
   margin-bottom: 30px;
