--- a/frontend/core/src/main/webapp/landing/em.css
+++ b/frontend/core/src/main/webapp/landing/em.css
@@ -1,6 +1,7 @@
 .embed-container {
     position: relative;
     padding-bottom: 56.25%; /* 16/9 ratio */
+    /*padding-bottom: 50%;  would show also the play bar*/
     padding-top: 30px; /* IE6 workaround*/
     height: 0;
     overflow: hidden;
