Fiddling with Angular animations.

--- a/frontend/core/src/main/webapp/static/partials/templates/navigation.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/navigation.html
@@ -1,6 +1,6 @@
 <div ng-controller="NavigationController">
 
-  <nav class="navbar" role="navigation">
+  <nav class="navbar navbar-fixed-top" role="navigation">
 
     <div class="navbar-header">
       <h1><small> <a href="" class="navbar-link" ng-click="swipeRight()">&laquo; </a>{{subtitle}} <a href="" class="navbar-link" ng-click="swipeLeft()">&raquo;</a></small></h1>
