Hardware accelerated CSS animations.

--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,7 +1,6 @@
 <div ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
 
-  <div navigation-bar></div>
-
-  <div ng-include="template.url" ng-animate="{{pageAnimation}}"></div>
+  <!-- <div navigation-bar></div> -->
+  <div class="em-animate" ng-include="template.url" ng-animate="{{pageAnimation}}"></div>
 
 </div>
