--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -113,96 +113,43 @@ ul {
   color: gray;
 }
 
-.em-page-enter-left, .em-page-enter-right, .em-page-leave-left, .em-page-leave-right {
-  -webkit-transition: all linear 0.3s;
+.em-animate-enter-left {
   position: absolute;
+  -webkit-transition: 0.2s ease-out all;
+  -webkit-transform: translate3d(-100%,0,0);
+}
+.em-animate-enter-left.em-animate-enter-left-active {
+  position: absolute;
+  -webkit-transform: translate3d(0,0,0);
+}
+.em-animate-leave-right {
+  position: absolute;
+  -webkit-transition: 0.2s ease-out all;
+  -webkit-transform: translate3d(0,0,0);
 }
 
-.em-page-enter-left {
-  left: -100% !important;
-  right: auto !important;
-  
-  &.em-page-enter-left-active {
-    left: 0 !important;
-    right: auto !important;
-  }
-}
-.em-page-leave-right, .em-page-leave-left {
-  left: 0 !important;
-  right: auto !important;
-  &.em-page-leave-right-active {
-    left: 100% !important;
-    right: auto !important;
-  }
-
-  &.em-page-leave-left-active {
-    left: -100% !important;
-    right: auto !important;
-  }
+.em-animate-leave-right.em-animate-leave-right-active {
+  position: absolute;
+  -webkit-transform: translate3d(100%,0,0);
 }
 
-.em-page-enter-right {
-  left: 100% !important;
-  right: auto !important;
-  &.em-page-enter-right-active {
-    left: 0 !important;
-    right: auto !important;
-  }
+.em-animate-enter-right {
+  position: absolute;
+  -webkit-transition: 0.2s ease-out all;
+  -webkit-transform: translate3d(100%,0,0);
+}
+.em-animate-enter-right.em-animate-enter-right-active {
+  position: absolute;
+  -webkit-transform: translate3d(0,0,0);
+}
+.em-animate-leave-left {
+  position: absolute;
+  -webkit-transition: 0.2s ease-out all;
+  -webkit-transform: translate3d(0,0,0);
 }
 
-.example-repeat-enter, .example-repeat-leave, .example-repeat-move {
-  -webkit-transition: all linear 0.5s;
-  -moz-transition: all linear 0.5s;
-  -ms-transition: all linear 0.5s;
-  -o-transition: all linear 0.5s;
-  transition: all linear 0.5s;
+.em-animate-leave-left.em-animate-leave-left-active {
+  position: absolute;
+  -webkit-transform: translate3d(-100%,0,0);
 }
 
-.example-repeat-enter {
-  line-height: 0;
-  opacity: 0;
-}
-.example-repeat-enter.example-repeat-enter-active {
-  line-height: 20px;
-  opacity: 1;
-}
-
-.example-repeat-leave {
-  opacity: 1;
-  line-height: 20px;
-}
-.example-repeat-leave.example-repeat-leave-active {
-  opacity: 0;
-  line-height: 0;
-}
-
-.example-repeat-move {
-}
-.example-repeat-move.example-repeat-move-active {
-}
-
-.fade-hide, .fade-show,
-.calendar-hide, .calendar-show {
-  -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-  -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-  -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-}
-
-.fade-hide,
-.calendar-hide {
-  opacity:1;
-}
-.fade-hide.fade-hide-active,
-.calendar-hide.calendar-hide-active {
-  opacity:0;
-}
-
-.fade-show,
-.calendar-show {
-  opacity:0;
-}
-.fade-show.fade-show-active,
-.calendar-show.calendar-show-active {
-  opacity:1;
-}
