--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -113,43 +113,35 @@ ul {
   color: gray;
 }
 
-.em-animate-enter-left {
+.em-animate-enter-left, .em-animate-enter-right, .em-animate-leave-left, .em-animate-leave-right {
+  -webkit-transition: -webkit-transform 0.2s ease-out;
   position: absolute;
-  -webkit-transition: 0.2s ease-out all;
-  -webkit-transform: translate3d(-100%,0,0);
-}
-.em-animate-enter-left.em-animate-enter-left-active {
-  position: absolute;
-  -webkit-transform: translate3d(0,0,0);
-}
-.em-animate-leave-right {
-  position: absolute;
-  -webkit-transition: 0.2s ease-out all;
-  -webkit-transform: translate3d(0,0,0);
 }
 
-.em-animate-leave-right.em-animate-leave-right-active {
-  position: absolute;
-  -webkit-transform: translate3d(100%,0,0);
+.em-animate-enter-left {
+  -webkit-transform: translate3d(-100%,0,0) !important;
+
+  &.em-animate-enter-left-active {
+  -webkit-transform: translate3d(0,0,0) !important;
+  }
+}
+.em-animate-leave-right, .em-animate-leave-left {
+  -webkit-transform: translate3d(0,0,0) !important;
+
+  &.em-animate-leave-right-active {
+  -webkit-transform: translate3d(100%,0,0) !important;
+  }
+
+  &.em-animate-leave-left-active {
+  -webkit-transform: translate3d(-100%,0,0) !important;
+  }
 }
 
 .em-animate-enter-right {
-  position: absolute;
-  -webkit-transition: 0.2s ease-out all;
-  -webkit-transform: translate3d(100%,0,0);
-}
-.em-animate-enter-right.em-animate-enter-right-active {
-  position: absolute;
-  -webkit-transform: translate3d(0,0,0);
-}
-.em-animate-leave-left {
-  position: absolute;
-  -webkit-transition: 0.2s ease-out all;
-  -webkit-transform: translate3d(0,0,0);
-}
+  -webkit-transform: translate3d(100%,0,0) !important;
 
-.em-animate-leave-left.em-animate-leave-left-active {
-  position: absolute;
-  -webkit-transform: translate3d(-100%,0,0);
+  &.em-animate-enter-right-active {
+  -webkit-transform: translate3d(0,0,0) !important;
+  }
 }
 
