--- a/frontend/core/src/main/webapp/static/partials/my/tasks.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks.html
@@ -1,19 +1,23 @@
-<div>
-  <div>
-    <h4>inbox</h4>
-    <div tasks-list tasksfilter="{{tasksListFilter}}"></div>
+<div class="em-animate" ng-animate="{{pageAnimation}}">
+
+  <div ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
+
+    <div>
+      <h4>inbox</h4>
+      <div tasks-list tasksfilter="{{tasksListFilter}}"></div>
+    </div>
+
+    <div>
+      <h4>projects</h4>
+      <div projects-list></div>
+    </div>
+
+    <h4>areas</h4>
+
+    <div>
+      <h4>contexts</h4>
+      <div contexts-list></div>
+    </div>
+
   </div>
-
-  <div>
-    <h4>projects</h4>
-    <div projects-list></div>
-  </div>
-
-  <h4>areas</h4>
-
-  <div>
-    <h4>contexts</h4>
-    <div contexts-list></div>
-  </div>
-
 </div>
