--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -145,3 +145,38 @@ ul {
   }
 }
 
+// .em-animate-enter-left, .em-animate-enter-right, .em-animate-leave-left, .em-animate-leave-right {
+  // -webkit-transition: all linear 0.3s;
+  // position: absolute;
+// }
+// 
+// .em-animate-enter-left {
+  // left: -100% !important;
+  // right: auto !important;
+//   
+  // &.em-animate-enter-left-active {
+    // left: 0 !important;
+    // right: auto !important;
+  // }
+// }
+// .em-animate-leave-right, .em-animate-leave-left {
+  // left: 0 !important;
+  // right: auto !important;
+  // &.em-animate-leave-right-active {
+    // left: 100% !important;
+    // right: auto !important;
+  // }
+// 
+  // &.em-animate-leave-left-active {
+    // left: -100% !important;
+    // right: auto !important;
+  // }
+// }
+// 
+// .em-animate-enter-right {
+  // left: 100% !important;
+  // right: auto !important;
+  // &.em-page-enter-right-active {
+    // left: 0 !important;
+    // right: auto !important;
+  // }}
