--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,6 +1,37 @@
-<div ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
+<div class="em-animate" ng-animate="{{pageAnimation}}">
 
-  <!-- <div navigation-bar></div> -->
-  <div class="em-animate" ng-include="template.url" ng-animate="{{pageAnimation}}"></div>
+  <div ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
 
+    <!-- <div navigation-bar></div> -->
+
+    <form name="searchAndAddOmniForm">
+
+      <input type="search" class="formContent"  ng-model="newItem.title" placeholder="Search / Add">
+      <button type="button" class="addNew" ng-click="addNewItem()">
+        +
+      </button>
+
+    </form>
+
+    <div>
+      <button type="button" class="toggle" ng-click="toggleItemsList()">
+        <h4>inbox ({{items.length}})</h4>
+      </button>
+      <div ng-show="showMe" items-list itemsfilter="newItem.title"></div>
+    </div>
+
+    <div>
+      <div notes-list notesfilter="newItem.title">
+        <h4><a href="my/notes" class="em-subtitle">notes</a></h4>
+      </div>
+    </div>
+
+    <div>
+      <div tasks-list tasksfilter="newItem.title">
+        <h4><a href="my/tasks" class="em-subtitle">tasks</a></h4>
+      </div>
+    </div>
+
+    <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
+  </div>
 </div>
