--- a/frontend/core/src/main/webapp/static/partials/templates/navigation.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/navigation.html
@@ -1,9 +1,9 @@
 <div ng-controller="NavigationController">
 
-  <nav class="navbar navbar-fixed-top" role="navigation">
+  <nav class="navbar" role="navigation">
 
     <div class="navbar-header">
-      <h1><small> <a href="" class="navbar-link" ng-click="swipeRight()">&laquo; </a>{{subtitle}} <a href="" class="navbar-link" ng-click="swipeLeft()">&raquo;</a></small></h1>
+      <h1><a href="" class="navbar-link" ng-click="swipeRight()">&laquo; </a>{{pageTitle}} <small>{{subtitle}}</small> <a href="" class="navbar-link" ng-click="swipeLeft()">&raquo;</a></h1>
     </div>
 
   </nav>
