--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -1,10 +1,33 @@
 body {
    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
    font-weight: 300;
+    width: 100%;
+   height:100%;
+}
+html{
+    width: 100%;
+  height:100%;
 }
 
 .container {
+    width: 100%;
+  height:100%;
   padding: 50px;
+}
+.row-fluid{
+  
+    width: 100%;
+  height:100%;
+}
+.em-page{
+  
+    width: 100%;
+  height:100%;
+}
+.em-animate{
+  
+    width: 100%;
+  height:100%;
 }
 
 a, .em-subtitle {
@@ -119,7 +142,7 @@ ul {
 }
 
 .em-animate-enter-left, .em-animate-enter-right, .em-animate-leave-left, .em-animate-leave-right {
-  -webkit-transition: -webkit-transform 0.2s ease-out;
+  -webkit-transition: -webkit-transform 0.3s ease-out;
   position: absolute;
 }
 
