--- a/frontend/core/src/main/webapp/static/partials/my/tasks.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks.html
@@ -1,4 +1,4 @@
-<div class="em-animate" ng-animate="{{pageAnimation}}">
+<div class="em-animate" ng-animate="{{pageAnimation}}" ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
 
   <div ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
     
