Disabled zooming capabilities on mobile devices.

--- a/frontend/core/src/main/webapp/static/partials/templates/navigation.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/navigation.html
@@ -2,7 +2,7 @@
   <div class="em-animate" ng-animate="{{pageAnimation}}">
 
     <div ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
-      <nav class="navbar" role="navigation">
+      <nav class="navbar navbar-fixed-top" role="navigation">
 
         <div class="navbar-header">
           <h1><a href="" class="navbar-link" ng-click="next()">&laquo; </a>{{pageTitle}}<small> {{subtitle}} </small><a href="" class="navbar-link" ng-click="previous()">&raquo;</a></h1>
