--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -10,6 +10,7 @@ html{
 }
 
 .container {
+  position:relative;
     width: 100%;
   height:100%;
   padding: 50px;
@@ -142,33 +143,36 @@ ul {
 }
 
 .em-animate-enter-left, .em-animate-enter-right, .em-animate-leave-left, .em-animate-leave-right {
-  -webkit-transition: -webkit-transform 0.3s ease-out;
-  position: absolute;
+  -webkit-transition: -webkit-transform 0.2s ease-out;
+display:block;
+position:absolute;
 }
 
 .em-animate-enter-left {
-  -webkit-transform: translate3d(-100%,0,0) !important;
+  -webkit-transform: translate(-100%,0) !important;
 
   &.em-animate-enter-left-active {
-  -webkit-transform: translate3d(0,0,0) !important;
+  -webkit-transform: translate(0,0) !important;
   }
 }
-.em-animate-leave-right, .em-animate-leave-left {
-  -webkit-transform: translate3d(0,0,0) !important;
+.em-animate-leave-right {
+  -webkit-transform: translate(0,0) !important;
 
   &.em-animate-leave-right-active {
-  -webkit-transform: translate3d(100%,0,0) !important;
+  -webkit-transform: translate(100%,0) !important;
   }
-
+}
+.em-animate-leave-left{
+  -webkit-transform: translate(0,0) !important;
   &.em-animate-leave-left-active {
-  -webkit-transform: translate3d(-100%,0,0) !important;
+  -webkit-transform: translate(-100%,0) !important;
   }
 }
 
 .em-animate-enter-right {
-  -webkit-transform: translate3d(100%,0,0) !important;
+  -webkit-transform: translate(100%,0) !important;
 
   &.em-animate-enter-right-active {
-  -webkit-transform: translate3d(0,0,0) !important;
+  -webkit-transform: translate(0,0) !important;
   }
 }
