Twitter Bootstrap CSS.

--- a/frontend/core/src/main/webapp/static/partials/my/tasks.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks.html
@@ -1,6 +1,5 @@
 <div class="em-animate" ng-animate="{{pageAnimation}}" ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
-
-  <div ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
+<h3 class="text-primary">tasks</h3>
 
     <div>
       <h4>inbox</h4>
