--- a/frontend/core/src/main/webapp/static/partials/templates/urlList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/urlList.html
@@ -1,3 +1,14 @@
-<div>
-  <a href="my/tasks">tasks</a> | <a href="my/notes">notes</a> | <a href="login">login</a> | <a href="my">my</a> | <a href="/">home</a>
-</div>
+<ul class="list-inline">
+  <li>
+    <a href="my/tasks">tasks</a>
+  </li>
+  <li>
+    <a href="my/notes">notes</a>
+  </li>
+  <li>
+    <a href="my/login">login</a>
+  </li>
+  <li>
+    <a href="my">my</a>
+  </li>
+</ul>
