--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -13,7 +13,7 @@ html{
   position:relative;
     width: 100%;
   height:100%;
-  padding: 50px;
+  // padding: 50px;
 }
 .row-fluid{
   
@@ -23,7 +23,7 @@ html{
 .em-page{
   
     width: 100%;
-  height:100%;
+  // height:100%;
 }
 .em-animate{
   
@@ -126,7 +126,7 @@ ul.em-headers {
 }
 
 li.em-header {
-  padding-bottom: 20px;
+  // padding-bottom: 20px;
 }
 
 ul {
@@ -144,6 +144,7 @@ ul {
 
 .em-animate-enter-left, .em-animate-enter-right, .em-animate-leave-left, .em-animate-leave-right {
   -webkit-transition: -webkit-transform 0.2s ease-out;
+  transition: -webkit-transform 0.2s ease-out;
 display:block;
 position:absolute;
 }
