--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,5 +1,5 @@
 <div class="em-animate" ng-animate="{{pageAnimation}}" ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
-
+<h3 class="text-primary">extended mind</h3>
   <form name="searchAndAddOmniForm">
 
     <input type="search" class="formContent"  ng-model="newItem.title" placeholder="Search / Add">
