--- a/frontend/core/src/main/webapp/static/partials/my/notes.html
+++ b/frontend/core/src/main/webapp/static/partials/my/notes.html
@@ -1,4 +1,5 @@
 <div class="em-animate" ng-animate="{{pageAnimation}}" ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
+<h3 class="text-primary">notes</h3>
 
   <div ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
 
