--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,15 +1,19 @@
 <div class="em-animate" ng-animate="{{pageAnimation}}" ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
-<h3 class="text-primary">extended mind</h3>
-  <form name="searchAndAddOmniForm">
+  <h3 class="text-primary">extended mind</h3>
 
-    <input type="search" class="formContent"  ng-model="newItem.title" placeholder="Search / Add">
-    <button type="button" class="addNew" ng-click="addNewItem()">
-      +
-    </button>
-
-  </form>
-
+  <div class="row">
+    <div class="col-lg-6">
+      <div class="input-group">
+        <input type="text" class="form-control" ng-model="newItem.title" placeholder="search / add" required>
+        <span class="input-group-btn">
+          <button class="btn btn-default" type="button" ng-disabled="!newItem.title" ng-click="addNewItem()">
+            +
+          </button> </span>
+      </div>
+    </div>
+  </div>
   <div>
+    
     <button type="button" class="toggle" ng-click="toggleItemsList()">
       <h4>inbox ({{items.length}})</h4>
     </button>
