--- a/frontend/core/src/main/webapp/static/partials/templates/notesList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/notesList.html
@@ -2,10 +2,8 @@
   <div ng-transclude ng-show="notesListFilter"></div>
 
   <ul>
-    <li ng-show="notesListFilter" ng-repeat="note in notes | filter:newItem" ng-animate="{enter: 'example-repeat-enter',
-    leave: 'example-repeat-leave',
-    move: 'example-repeat-move'}">
-      {{note.title}}
+    <li ng-show="notesListFilter" ng-repeat="note in notes | filter:newItem">
+      <span>{{note.title}}</span>
     </li>
   </ul>
 
