--- a/frontend/core/src/main/webapp/static/partials/templates/urlList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/urlList.html
@@ -1,14 +1,8 @@
 <ul class="list-inline">
   <li>
-    <a href="my/tasks">tasks</a>
+    <h4><a class="text-muted" href="my/tasks">tasks</a></h4>
   </li>
   <li>
-    <a href="my/notes">notes</a>
-  </li>
-  <li>
-    <a href="my/login">login</a>
-  </li>
-  <li>
-    <a href="my">my</a>
+    <h4><a class="text-muted" href="my/notes">notes</a></h4>
   </li>
 </ul>
