--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,10 +1,12 @@
 <div class="em-animate" ng-animate="{{pageAnimation}}" ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
   <h3 class="text-primary">extended mind</h3>
+  
+  <div ng-show="!newItem.title" url-list></div>
 
   <div class="row">
     <div class="col-lg-6">
       <div class="input-group">
-        <input type="text" class="form-control" ng-model="newItem.title" placeholder="search / add" required>
+        <input type="search" class="form-control" ng-model="newItem.title" placeholder="search / add" required>
         <span class="input-group-btn">
           <button class="btn btn-default" type="button" ng-disabled="!newItem.title" ng-click="addNewItem()">
             <span class="glyphicon glyphicon-plus"></span>
