--- a/frontend/core/src/main/webapp/static/partials/templates/taskContent.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/taskContent.html
@@ -10,9 +10,7 @@
   </li>
 
   <li>
-    <button type="button" class="editItem" ng-click="setActiveItem(task)">
-      <a href="my/tasks/project/{{task.uuid}}">add subtask</a>
-    </button>
+    <a class="text-muted" href="my/tasks/project/{{task.uuid}}" ng-click="setActiveItem(task)">add subtask</a>
   </li>
 
 </ul>
