--- a/frontend/core/src/main/webapp/static/partials/templates/urlList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/urlList.html
@@ -1,8 +1,8 @@
 <ul class="list-inline">
   <li>
-    <h4><a class="text-muted" href="my/tasks">tasks</a></h4>
+    <h4><a class="text-muted" href="" ng-click="swipeRight()">notes</a></h4>
   </li>
   <li>
-    <h4><a class="text-muted" href="my/notes">notes</a></h4>
+    <h4><a class="text-muted" href="" ng-click="swipeLeft()">tasks</a></h4>
   </li>
 </ul>
