New task button adjustment.

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -48,8 +48,8 @@ label {
 }
 
 #header {
-  vertical-align: bottom;
-  display: inline;
+  // vertical-align: bottom;
+  // display: inline;
 }
 
 .accordion-group {
