--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -6,7 +6,7 @@
   <div class="row">
     <div class="col-lg-6">
       <div class="input-group">
-        <input type="TEXT" class="form-control" ng-model="newItem.title" placeholder="search / add" ng-click="toggleUrlList()" required>
+        <input type="text" class="form-control" ng-model="newItem.title" placeholder="search / add" ng-click="toggleUrlList()" required>
         <span class="input-group-btn">
           <button class="btn btn-default" type="button" ng-disabled="!newItem.title" ng-click="addNewItem()">
             +
