--- a/frontend/core/src/main/webapp/static/partials/my/tasks.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks.html
@@ -1,22 +1,27 @@
 <div class="em-animate" ng-animate="{{pageAnimation}}" ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
-<h3 class="text-primary">tasks</h3>
 
-    <div>
-      <h4>inbox</h4>
-      <div tasks-list tasksfilter="{{tasksListFilter}}"></div>
-    </div>
+  <button type="button" class="btn btn-default pull-right" ng-click="addNew()">
+    +
+  </button>
 
-    <div>
-      <h4>projects</h4>
-      <div projects-list></div>
-    </div>
+  <h3 class="text-primary">tasks</h3>
 
-    <h4>areas</h4>
-
-    <div>
-      <h4>contexts</h4>
-      <div contexts-list></div>
-    </div>
-
+  <div>
+    <h4>inbox</h4>
+    <div tasks-list tasksfilter="{{tasksListFilter}}"></div>
   </div>
+
+  <div>
+    <h4>projects</h4>
+    <div projects-list></div>
+  </div>
+
+  <h4>areas</h4>
+
+  <div>
+    <h4>contexts</h4>
+    <div contexts-list></div>
+  </div>
+
+</div>
 </div>
