--- a/frontend/core/src/main/webapp/static/partials/my/tasks/project.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/project.html
@@ -1,17 +1,10 @@
 <div>
-  <div id="header">
 
-    <div class="inlineblock">
-      <h4><a href="my/tasks" class="em-subtitle">tasks</a></h4>
-    </div>
+  <button type="button" class="btn btn-default pull-right" ng-click="addNew()">
+    +
+  </button>
 
-    <div class="inlineblock">
-      <button type="button" class="addNew">
-        <a href="my/tasks/new/">+</a>
-      </button>
-    </div>
-
-  </div>
+  <h3 class="text-primary">tasks</h3>
 
   <h4>{{project.title}}</h4>
 
