--- a/frontend/core/src/main/webapp/landing/em.css
+++ b/frontend/core/src/main/webapp/landing/em.css
@@ -1,7 +1,6 @@
 .embed-container {
     position: relative;
-    padding-bottom: 56.25%; /* 16/9 ratio */
-    /*padding-bottom: 50%;  would show also the play bar*/
+    padding-bottom: 56.25%;  /* 16/9 ratio */
     padding-top: 30px; /* IE6 workaround*/
     height: 0;
     overflow: hidden;
@@ -10,11 +9,18 @@
 .embed-container iframe,
 .embed-container object,
 .embed-container embed {
-    position: absolute;
+	position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.embed-margin {
+	max-width: 80%;
+	margin-top: 2%;
+	margin-left: auto;
+    margin-right: auto;
 }
 
 .stich-top {
@@ -73,21 +79,11 @@ a:hover {
 }
 
 .em-topmargin{
-  height: 5px;
-}
-
-.em-app {
-  max-width: 340px;
-  margin-left: auto ;
-  margin-right: auto ;
-  border:solid;
-  border-color: #4c4c4c;
-  border-width: 2px;
-  color: #d6d6d6;
+  height: 20px;
 }
 
 .em-heading {
-  margin-top: 10%;
+  margin-top: 5%;
   margin-bottom: 5%;
 }
 
@@ -122,7 +118,7 @@ input, button {
 
 .em-logo {
   margin-top: 7%;
-  margin-bottom: 5%;
+  margin-bottom: 70px;
 }
 
 .footer a{
